# Rust-REST-API

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
firefleeb_api/: Cargo.toml
firefleeb_api/migrations/2025-10-29-145744-0000_create_users/: down.sql  up.sql
firefleeb_api/migrations/2025-10-29-150506-0000_create_products/: down.sql  up.sql
firefleeb_api/migrations/2025-10-29-152603-0000_create_carts/: down.sql  up.sql
firefleeb_api/migrations/2025-10-29-152609-0000_create_cart_items/: down.sql  up.sql
firefleeb_api/migrations/2025-11-07-134237-0000_add_cart_total_to_carts/: down.sql  up.sql
firefleeb_api/migrations/2025-11-08-133222-0000_add_unique_cart_item_idx/: down.sql  up.sql
firefleeb_api/src/: errors.rs  lib.rs  main.rs  schema.rs
firefleeb_api/src/db/: cart_item_repository.rs  cart_repository.rs  mod.rs  product_repository.rs  user_repository.rs
firefleeb_api/src/handlers/: cart_handlers.rs  cart_item_handlers.rs  mod.rs  product_handlers.rs  user_handlers.rs
firefleeb_api/src/handlers/dtos/: cart_dtos.rs  cart_item_dtos.rs  mod.rs  (+2 more)
firefleeb_api/src/models/: cart.rs  cart_item.rs  mod.rs  product.rs  user.rs
firefleeb_api/src/routes/: cart_routes.rs  filters.rs  mod.rs  product_routes.rs  rejections.rs  user_routes.rs
firefleeb_api/src/services/: cart_item_service.rs  cart_service.rs  mod.rs  product_service.rs  user_service.rs
firefleeb_api/src/types/: email.rs
firefleeb_api/tests/: cart_routes_it.rs  common.rs  product_routes_it.rs  user_repository_it.rs  user_routes_it.rs
(+1 files in other folders)
