[package]
name = "firefleeb_api"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.17.1"
diesel = "2.3.3"
diesel_migrations = "2.3.0"
dotenv = "0.15.0"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
r2d2 = "0.8.10"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"


